# mklint

./: LICENSE  mklint.cabal
.github/workflows/: haskell.yml
app/: Main.hs
example/: foo.toml  mackerel-agent.toml
src/: Mklint.hs
test/: MklintSpec.hs
