cabal-version:      3.0
name:               mklint
version:            0.1.0.0
synopsis:           Linter for mackerel-agent.conf
-- description:
homepage:           https://github.com/wafuwafu13/mklint
license:            MIT
license-file:       LICENSE
author:             wafuwafu13
maintainer:         wafuwafumariobaske@gmail.com
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable mklint
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.0.0
    hs-source-dirs:   app
    default-language: Haskell2010
