cabal-version:      3.0
name:               mklint
version:            0.1.0.0
synopsis:           Linter for mackerel-agent.conf
-- description:
homepage:           https://github.com/wafuwafu13/mklint
license:            MIT
license-file:       LICENSE
author:             wafuwafu13
maintainer:         wafuwafumariobaske@gmail.com
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common common-all
    build-depends:
        base ^>=4.17.0.0,
    ghc-options:      -Wall
    default-language: Haskell2010

common test-depends
    build-depends:       hspec ^>= 2.10.6
    build-tool-depends:  hspec-discover:hspec-discover

library
    import:           common-all
    exposed-modules:  Mklint
    hs-source-dirs:   src

executable mklint
    import:           common-all
    main-is:          Main.hs
    other-modules:    Mklint
    hs-source-dirs:   app, src

test-suite mklint-test
    import:           common-all, test-depends
    type:             exitcode-stdio-1.0
    hs-source-dirs:   src, test
    main-is:          Spec.hs
    test-module:      Test
    other-modules:    Mklint, MklintSpec
    build-depends:    mklint
